SignUp flow completed
SignUp positive and negative tests are implemented

--- a/build.gradle
+++ b/build.gradle
@@ -43,3 +43,12 @@ task testUserLogin(type:Test){
         systemProperty 'browser', "${browser}"
     }
 }
+
+task testUserSignup(type:Test){
+    useTestNG {
+        suites 'src/test/resources/testng-UserSignup.xml'
+    }
+    if(project.hasProperty('browser')){
+        systemProperty 'browser', "${browser}"
+    }
+}
